...
        android:layout_height="300dp"
        android:layout_width="wrap_content"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_video_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/player_view"
        android:layout_margin="@dimen/margin_vertical"
        android:textSize="@dimen/video_description_text_size" />

...
            android:layout_height="@dimen/button_size"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_previous" />

        <ImageButton
            android:id="@+id/btn_step_next"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next" />
    </LinearLayout>
...
